--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -84,6 +84,7 @@
         <script src="/src/common/models/data.js"></script>
         <script src="/src/common/models/index.js"></script>
         <script src="/src/common/models/network.js"></script>
+        <script src="/src/common/models/order.js"></script>
         <script src="/src/common/models/prediction.js"></script>
         <script src="/src/common/models/user.js"></script>
         <script src="/src/common/services/config.js"></script>
