--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -9,52 +9,76 @@
 	<!--<nvd3 options='options' data='data'></nvd3>
 	<nvd3 options='directedOptions' data='directedData'></nvd3>-->
 
-
 	<div class="container" id="about">
 		<div style="height:50px;"></div>
-	    <div style="text-align:left;" id="header-text-area">
-	       <h1>empowered financial representation</h1>
-	       <h3 style="">backed by sound, open data</h3>
-	    </div>
-	    <div style="height:50px;"></div>
+		<div class="row">
+			<div class="col-sm-12">
+			    <div style="text-align:left;" id="header-text-area">
+			       <h1>empowered financial representation</h1>
+			       <h3 style="">backed by sound, open data</h3>
+			    </div>
+			</div>
+		</div>
+		<div style="height:50px;"></div>
 	</div>
 
 	<div class="container" style="text-align:left">
-		<br>
-		<!--<h3 style="text-align:center;">a computational network designed to normalize risk and equalize investment returns.</h3>-->
-		<p>select financial representatives</p>
-		<br>
+		<div style="height:100px;"></div>
 		<div class="row">
-			<div class="col-sm-12">
-				<h3><i class="fa fa-wrench"></i> financial representation </h3>
+			<div class="col-sm-6">
+				<h3><i class="fa fa-wrench"></i> sound financial representation </h3>
 				<p>a community of transparent analysts </p>
+				<p>select financial representatives</p>
 			</div>
-			<div class="col-sm-12">
+			<!--<div class="col-sm-6">
+				<img src="images/tesseract-bg.png">
+			</div>-->
+		</div>
+		<div style="height:100px;"></div>
+		<div class="row">
+			<div class="col-sm-4">
+				<img src="images/tesseract-bg.png">
+			</div>
+			<div class="col-sm-8" style="text-align:right">
 				<h3><i class="fa fa-github"></i> community collaboration and discussion</h3>
 				<p>contribute. collab. invest.</p>
 			</div>
 		</div>
+		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3><i class="fa fa-file-o"></i> open datasets</h3>
-				<p>data, we use. data we prouduce, together.</p>
+				<h3><i class="fa fa-file-o"></i> open transparent data</h3>
+				<p>data we use, data we prouduce, together.</p>
 			</div>
-			<div class="col-sm-12">
-				<h3><i class="fa fa-wrench"></i> view the analysis </h3>
+		</div>
+		<div style="height:100px;"></div>
+		<div class="row">
+			<div class="col-sm-12" style="text-align:right">
+				<h3><i class="fa fa-wrench"></i> cutting edge analysis </h3>
 				<p>distributed networks working together to give you the cutting edge</p>
+				<p>a computational network designed to normalize risk and equalize investment returns.</p>
+				<p>decentralized network that works together to power financial simulations.</p>
 			</div>
+		</div>
+		<div style="height:100px;"></div>
+		<div class="row">
 			<div class="col-sm-12">
 				<h3><i class="fa fa-cogs"></i> transparent finance </h3>
 				<p>data-backed and proven results</p>
 			</div>
 		</div>
-		<br>
-		<p class="lead">nice...</p>
-		<a href="/about" class="btn btn-default">now let me see some numbers</a>
-		<br><br><br>
+		<div style="height:100px;"></div>
+		<div class="row">
+			<div class="col-sm-12">
+				<p class="lead">nice...</p>
+				<a href="/about" class="btn btn-default">now let me see some numbers</a>
+				<br><br>
+			</div>
+		</div>
 	</div>
 
-	<!--<div style="background-color:rgb(220,220,220);">
+	<!--
+	<div style="background-color:rgb(220,220,220);">
 		<br><br><br>
 		<h1 style="text-align:center;">why you'll love investingfor</h1>
 		<br><br>
@@ -69,17 +93,18 @@
 		<br>
 		<p class="lead" style="text-align:center;">investingfor us all.</p>
 		<br><br><br>
-	</div>-->
+	</div>
+	-->
 
 	<div style="text-align:left">
 		<br><br><br>
 		<div class="container" style="">
-			<h4>decentralized network that works together to power financial simulations.</h4>
-			<nvd3 options='options' data='data'></nvd3>
+			<h1>Market Exposure</h1>
+			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<br><br>
 			
 			<div ng-repeat="pair in tradingPairs">
-				<div class="col-md-3">
+				<div class="col-md-3 col-sm-4 col-xs-6 ">
 					<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 				</div>
 			</div>
@@ -118,9 +143,12 @@
 			<br>
 			<h4>sound and transparent investments</h4>
 			<!--daily return vs index..-->
-			<div ng-repeat="someData in marketData">
-				<p>traded {{someData.assetPair}} at {{someData.price}} at {{someData.createdAt}}</p>
+			<br><br>
+			<h1>order book</h1><br>
+			<div ng-repeat="order in orders">
+				<p>{{order.assetPair}} <!--{{order.type}}--> traded {{order.amount}} {{order.asset1}} for {{order.asset2}} at {{order.price}}: {{order.createdAt}}</p>
 			</div>
+			<br><br>
 		</div>
 	</div>
 
