--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -64,7 +64,8 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h3><i class="fa fa-cogs"></i> transparent finance </h3>
-				<p>data-backed and proven results</p>
+				<p>data-backed with proven results</p>
+				<!--<p>powerful apis</p>-->
 			</div>
 		</div>
 		<div style="height:100px;"></div>
@@ -89,7 +90,7 @@
 		<br>
 		<p class="lead" style="text-align:center;">what if our devices were working toward a common goal?</p>
 		<br>
-		<p class="lead" style="text-align:center;">extract value by earning <a href="http://www.epoint.me/market/investment-point">investment points</a>.</p>
+		<p class="lead" style="text-align:center;">extract value by earning crypto-backed <a href="http://www.epoint.me/market/investment-point">investment points</a>.</p>
 		<br>
 		<p class="lead" style="text-align:center;">investingfor us all.</p>
 		<br><br><br>
