--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -6,15 +6,15 @@
 
 	<nvd3 options='marketOptions' data='marketDataRenderRender'></nvd3>
 
-	<p class="btn btn-default" ng-click="selectTime(60000)">1 min</p>
-	<p class="btn btn-default" ng-click="selectTime(300000)">5 min</p>
-	<p class="btn btn-default" ng-click="selectTime(1800000)">30 min</p>
-	<p class="btn btn-default" ng-click="selectTime(3600000)">1hr</p>
-	<p class="btn btn-default" ng-click="selectTime(7200000)">2hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(14400000)">4hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(21600000)">6 hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(43200000)">12 hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(86400000)">24 hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1 min</p>
+	<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5 min</p>
+	<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30 min</p>
+	<p class="btn btn-default" ng-click="selectTime(3600000,'BTC')">1hr</p>
+	<p class="btn btn-default" ng-click="selectTime(7200000,'BTC')">2hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(14400000,'BTC')">4hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(21600000,'BTC')">6 hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(43200000,'BTC')">12 hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24 hrs</p>
 	
 </div>
 <div style="height:100px;"></div>
