--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -26,7 +26,7 @@
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-6">
-				<h3><i class="fa fa-wrench"></i> sound financial representation </h3>
+				<h3>sound financial representation </h3>
 				<p>a community of transparent analysts </p>
 				<p>select financial representatives</p>
 			</div>
@@ -40,21 +40,21 @@
 				<img src="images/tesseract-bg.png">
 			</div>
 			<div class="col-sm-8" style="text-align:right">
-				<h3><i class="fa fa-github"></i> community collaboration and discussion</h3>
+				<h3>community collaboration and contribution</h3>
 				<p>contribute. collab. invest.</p>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3><i class="fa fa-file-o"></i> open transparent data</h3>
+				<h3><i class="fa fa-file-o"></i> open and transparent data</h3>
 				<p>data we use, data we prouduce, together.</p>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12" style="text-align:right">
-				<h3><i class="fa fa-wrench"></i> cutting edge analysis </h3>
+				<h3><i class="fa fa-wrench"></i> cutting edge analysis at scale</h3>
 				<p>distributed networks working together to give you the cutting edge</p>
 				<p>a computational network designed to normalize risk and equalize investment returns.</p>
 				<p>decentralized network that works together to power financial simulations.</p>
@@ -63,7 +63,7 @@
 		<div style="height:100px;"></div>
 		<div class="row">
 			<div class="col-sm-12">
-				<h3><i class="fa fa-cogs"></i> transparent finance </h3>
+				<h3><i class="fa fa-cogs"></i> transparent financial results </h3>
 				<p>data-backed with proven results</p>
 				<!--<p>powerful apis</p>-->
 			</div>
@@ -100,7 +100,7 @@
 	<div style="text-align:left">
 		<br><br><br>
 		<div class="container" style="">
-			<h1>Market Exposure</h1>
+			<h1>market exposure</h1>
 			<!--<nvd3 options='options' data='data'></nvd3>-->
 			<br><br>
 			
@@ -139,7 +139,7 @@
 	<div style="text-align:left;">
 		<br><br><br>
 		<div class="container">
-			<h1>Activity</h1>
+			<h1>activity</h1>
 			<nvd3 options='marketOptions' data='marketGraphDataRender'></nvd3>
 			<br>
 			<h4>sound and transparent investments</h4>
