--- a/.tmp/public/src/app/login/index.tpl.html
+++ b/.tmp/public/src/app/login/index.tpl.html
@@ -4,10 +4,6 @@
             <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
                 <div class="site-heading">
                     <h1 class="blue-title">Login</h1>
-                    <hr class="small">
-                    <h2 class="post-title">
-                        Welcome back!
-                    </h2>
                 </div>
             </div>
         </div>
@@ -31,9 +27,9 @@
                     </div>
                     <br><br>
                     <div class="social-log">
-                        <a class="btn btn-social btn-facebook" href=""><i class="fa fa-facebook"></i> Facebook</a>
-                        <a class="btn btn-social btn-twitter" href=""><i class="fa fa-twitter"></i> Twitter</a>
-                        <a class="btn btn-social btn-google" href=""><i class="fa fa-google"></i> Google</a>
+                        <a class="btn btn-facebook" href="#"><i class="fa fa-facebook"></i> Facebook</a>
+                        <a class="btn btn-twitter" href="#"><i class="fa fa-twitter"></i> Twitter</a>
+                        <a class="btn btn-google" href="#"><i class="fa fa-google"></i> Google</a>
                     </div>
                     <br><hr>
                     <div class="">
@@ -44,3 +40,4 @@
         </div>
     </div>
 </div>
+<div ng-include="'footer/index.tpl.html'"></div>
