--- a/.tmp/public/src/app/market/index.tpl.html
+++ b/.tmp/public/src/app/market/index.tpl.html
@@ -25,8 +25,6 @@
 	<h2>Market Change^2</h2>
 	<nvd3 options='marketOptions' data='marketGraphChangeChangeDataRender'></nvd3>
 
-
-
 	<!--<h2>5 Min Prediction</h2>
 	<nvd3 options='options' data='fiveMinData'></nvd3>
 	<br><br><br>
@@ -94,6 +92,6 @@
 
 </div>-->
 
-
-
 <div style="height:100px;"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
+
