--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -1,7 +1,6 @@
 <div class="container" style="text-align:left">
 
 	<h1>markets</h1>
-
 	<h5>overlay of percentage gain</h5>
 
 	<nvd3 options='marketOptions' data='marketDataRenderRender'></nvd3>
@@ -18,3 +17,5 @@
 	
 </div>
 <div style="height:100px;"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
+
