--- a/assets/src/app/footer/index.tpl.html
+++ b/assets/src/app/footer/index.tpl.html
@@ -1,6 +1,6 @@
 <div class="footer" ng-controller="FooterCtrl">
   <div class="container">
-    {{date | date:'yyyy'}} <a href="/">investingfor</a>
+    {{date | date:'yyyy'}} <a href="/">collaborative.capital</a>
     <a href="/about">about</a>
     <a href="#">terms</a>
   </div>
