--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="text-align:left">
 	
 	<h1>member</h1>
 	<p>representing $1,000,000,000</p> 
@@ -8,7 +8,10 @@
 	<p>portfolio</p>
 	<p>positions</p>
 	<p>trade history</p>
-	<p>select to represent</p><!--for x $$$$ or array etc-->
+	<p>select as representative</p><!--pay commission to copy trades-->
+	<!--for x $$$$ or array etc-->
 
 </div>
 <div style="height:100px;"></div>
+<div ng-include="'footer/index.tpl.html'"></div>
+
