--- a/assets/src/app/register/index.tpl.html
+++ b/assets/src/app/register/index.tpl.html
@@ -1,13 +1,9 @@
 <div class="intro-header">
     <div class="container">
         <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1">
+            <div class="col-sm-12">
                 <div class="site-heading">
-                    <h1 class="blue-title">Create an Account</h1>
-                    <hr class="small">
-                    <h2 class="post-title">
-                        Welcome!
-                    </h2>
+                    <h1 class="post-title">Create an Account</h1>
                 </div>
             </div>
         </div>
@@ -35,9 +31,9 @@
                     </div>
                     <br><br>
                     <div class="social-log">
-                        <a class="btn btn-social btn-facebook" ng-click=""><i class="fa fa-facebook"></i> Facebook</a>
-                        <a class="btn btn-social btn-twitter" ng-click=""><i class="fa fa-twitter"></i> Twitter</a>
-                        <a class="btn btn-social btn-google" ng-click=""><i class="fa fa-google"></i> Google</a>
+                        <a class="btn btn-facebook" ng-click=""><i class="fa fa-facebook"></i> Facebook</a>
+                        <a class="btn btn-twitter" ng-click=""><i class="fa fa-twitter"></i> Twitter</a>
+                        <a class="btn btn-google" ng-click=""><i class="fa fa-google"></i> Google</a>
                     </div>
                     <br><hr>
                     <div class="social-log">
@@ -49,3 +45,4 @@
         </div>
     </div>
 </div>
+<div ng-include="'footer/index.tpl.html'"></div>
