--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -81,10 +81,12 @@
         <script src="/src/app/member/index.js"></script>
         <script src="/src/app/nav/index.js"></script>
         <script src="/src/app/register/index.js"></script>
+        <script src="/src/common/models/analysis.js"></script>
         <script src="/src/common/models/data.js"></script>
         <script src="/src/common/models/index.js"></script>
         <script src="/src/common/models/network.js"></script>
         <script src="/src/common/models/order.js"></script>
+        <script src="/src/common/models/portfolio.js"></script>
         <script src="/src/common/models/prediction.js"></script>
         <script src="/src/common/models/user.js"></script>
         <script src="/src/common/services/config.js"></script>
