--- a/.tmp/public/src/app/account/index.tpl.html
+++ b/.tmp/public/src/app/account/index.tpl.html
@@ -1,6 +1,7 @@
-<div class="container">
-	<h1>user info</h1>
-	<p>edit etc</p>
-	<h2>api key</h2>
+<div class="container" style="text-align:left">
+	<h1>Account info</h1>
+	<p>edit</p>
+	<p>notifications</p>
+	<h2>api keys</h2>
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
