--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -1,7 +1,9 @@
 <div ng-show="currentUser">
-	<h1>dashboard</h1>
-	<p>portfolio set</p>
-	<p>explore</p>
+	<div class="container" style="text-align:left">
+		<h1>dashboard</h1>
+		<p>portfolio set</p>
+		<p>link in wallets, connect api keys, fund account</p>
+	</div>
 </div>
 
 <div ng-show="!currentUser" >
