--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -2,24 +2,24 @@
 
 	<h1>markets</h1>
 
-	<div ng-repeat="pair in tradingPairs">
+	<!--<div ng-repeat="pair in tradingPairs">
 		<div class="col-md-3 col-sm-4 col-xs-6 ">
 			<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 		</div>
-	</div>
+	</div>-->
 
-	<h5>percentage change</h5>
+	<h5>overlay percentage change</h5>
 	<nvd3 options='marketOptions' data='marketDataRenderRender'></nvd3>
 
-	<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1 min</p>
-	<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5 min</p>
-	<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30 min</p>
+	<p class="btn btn-default" ng-click="selectTime(60000,'BTC')">1min</p>
+	<p class="btn btn-default" ng-click="selectTime(300000,'BTC')">5min</p>
+	<p class="btn btn-default" ng-click="selectTime(1800000,'BTC')">30min</p>
 	<p class="btn btn-default" ng-click="selectTime(3600000,'BTC')">1hr</p>
 	<p class="btn btn-default" ng-click="selectTime(7200000,'BTC')">2hrs</p>
 	<p class="btn btn-default" ng-click="selectTime(14400000,'BTC')">4hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(21600000,'BTC')">6 hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(43200000,'BTC')">12 hrs</p>
-	<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24 hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(21600000,'BTC')">6hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(43200000,'BTC')">12hrs</p>
+	<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24hrs</p>
 	<div style="height:100px;"></div>
 	<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
 </div>
