--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="investing" ng-controller="AppCtrl">
     <head>
-        <title>investingfor</title>
+        <title>COLLABORATIVE.CAPITAL</title>
         <base href="/">
 
         <!--META TAGS-->
