--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -22,6 +22,7 @@
 	<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24hrs</p>
 	<div style="height:100px;"></div>
 	<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
+	<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">SolveMulti</p>
 </div>
 
 <div class="container" style="text-align:left">
