--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -138,7 +138,8 @@
 
 	<br><br><br>
 
-	<div style="text-align:left;">
+	<div style="text-align:left;color:gray;background-color:black;">
+		<style>.nvd3 text{color:gray;fill:gray;}.nvd3 .nv-axis line{stroke:gray;}</style>
 		<br><br><br>
 		<div class="container">
 			<h1>activity</h1>
