--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -2,11 +2,13 @@
 
 	<h1>markets</h1>
 
-	<!--<div ng-repeat="pair in tradingPairs">
+	<!--
+	<div ng-repeat="pair in tradingPairs">
 		<div class="col-md-3 col-sm-4 col-xs-6 ">
 			<a href="market/{{pair.split('/')[1]}}/{{pair.split('/')[0]}}">{{pair.split('/')[1]}}/{{pair.split('/')[0]}}</a>
 		</div>
-	</div>-->
+	</div>
+	-->
 
 	<h5>overlay percentage change</h5>
 	<nvd3 options='marketOptions' data='marketDataRenderRender'></nvd3>
@@ -22,17 +24,26 @@
 	<p class="btn btn-default" ng-click="selectTime(86400000,'BTC')">24hrs</p>
 	<div style="height:100px;"></div>
 	<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
-	<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">SolveMulti</p>
+	<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
+
 </div>
+
+<div style="height:20px;"></div>
 
 <div class="container" style="text-align:left">
 
 	<div class="col-md-12">
-		<div ng-repeat="portfolio in portfolioData.portfolioSet">{{portfolio}}</div>
+		<div ng-repeat="portfolio in portfolioData.portfolioSet">
+			{{portfolio}}
+			<br><br>
+		</div>
 	</div>
 
 	<div class="col-md-12">
-		<div ng-repeat="order in portfolioData.orderSet"> {{order.amount}} {{order.asset1}} --@{{order.price}}--> {{order.amount / order.price}} {{order.asset2}}</div>
+		<div style="height:20px;"></div>
+		<div ng-repeat="order in portfolioData.orderSet">
+			<p>{{order.amount}} {{order.asset1}} --@{{order.price}}--> {{order.amount / order.price}} {{order.asset2}}</p>
+		</div>
 	</div>
 
 </div>
