--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -3,6 +3,9 @@
 		<h1>dashboard</h1>
 		<p>portfolio set</p>
 		<p>link in wallets, connect api keys, fund account</p>
+		<canvas id="doughnut" class="chart chart-doughnut"
+		  chart-data="portfolioData" chart-labels="portfolioLabels">
+		</canvas> 
 	</div>
 </div>
 
