--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -66,6 +66,8 @@
         <script src="/bower_components/d3/d3.js"></script>
         <script src="/bower_components/nvd3/build/nv.d3.js"></script>
         <script src="/bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+        <script src="/bower_components/Chart.js/Chart.min.js"></script>
+        <script src="/bower_components/angular-chart.js/dist/angular-chart.js"></script>
         <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
         <script src="/bower_components/angular-material/angular-material.js"></script>
