--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -33,7 +33,7 @@
 <div class="container" style="text-align:left">
 
 	<div class="col-md-12">
-		<div ng-repeat="portfolio in portfolioData.portfolioSet">
+		<div ng-repeat="portfolio in portfolioData.portfolioSet"> 0
 			{{portfolio}}
 			<br><br>
 		</div>
