--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -32,7 +32,8 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h3>sound financial representation </h3>
-				<p>a community of transparent analysts </p>
+				<p>intellligence; continually learning</p>
+				<p>a community of transparent analysts</p>
 				<p>select financial representatives</p>
 			</div>
 			<!--<div class="col-sm-6">
@@ -45,7 +46,7 @@
 				<img src="images/tesseract-bg.png">
 			</div>
 			<div class="col-sm-8" style="text-align:right">
-				<h3>community collaboration and contribution</h3>
+				<h3>collaboration and contribution</h3>
 				<p>contribute. collab. invest.</p>
 			</div>
 		</div>
@@ -60,9 +61,8 @@
 		<div class="row">
 			<div class="col-sm-12" style="text-align:right">
 				<h3><i class="fa fa-wrench"></i> cutting edge analysis at scale</h3>
-				<p>distributed networks working together to give you the cutting edge</p>
+				<p>distributed networks working together to give you the cutting edge.</p>
 				<p>a computational network designed to normalize risk and equalize investment returns.</p>
-				<p>decentralized network that works together to power financial simulations.</p>
 			</div>
 		</div>
 		<div style="height:100px;"></div>
