--- a/assets/styles/css/intro.css
+++ b/assets/styles/css/intro.css
@@ -117,13 +117,13 @@
     letter-spacing:-0.09em;
 }
 .medium-text {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Barlow', sans-serif;
     font-weight: 400;
     font-size: 4em;
     letter-spacing: .05em;
 }
 .small-text {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Jura', sans-serif;
     font-weight: 400;
     font-size: 2.5em;
     letter-spacing:-0.09em;
