--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Jura:300,400,600');
 @import "http://fonts.googleapis.com/css?family=Cantarell";
+@import "http://fonts.googleapis.com/css?family=Josefin+Sans";
+@import "http://fonts.googleapis.com/css?family=Catamaran";
+@import "http://fonts.googleapis.com/css?family=Barlow";
+
 
 html,body {
   height:100%;
@@ -39,6 +43,10 @@ a:hover {
 }
 
 h1,h2,h3 {
+  font-family: 'Josefin Sans';
+    //font-family: 'Catamaran';
+    font-family: 'Barlow';
+
 }
 
 md-progress-linear .md-container {
@@ -333,8 +341,12 @@ input:-ms-input-placeholder {
   }
 }
 .nav {
-  font-family:Jura;
+  font-family:Barlow;
   font-size:20px;
+}
+
+.navbar-brand{
+  font-family:Barlow;font-size:20px;
 }
 
 .active span {
