--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -43,10 +43,9 @@ a:hover {
 }
 
 h1,h2,h3 {
-  font-family: 'Josefin Sans';
-    //font-family: 'Catamaran';
-    font-family: 'Barlow';
-
+  //font-family: 'Josefin Sans';
+  //font-family: 'Catamaran';
+  font-family: 'Barlow';
 }
 
 md-progress-linear .md-container {
