--- a/assets/src/app/market/index.tpl.html
+++ b/assets/src/app/market/index.tpl.html
@@ -44,6 +44,12 @@
 	<button class="btn btn-default" ng-click="getPdf('changeChange')">pdf</button><!--;)-->
 	<nvd3 options='marketOptions' data='marketGraphChangeChangeDataRender'></nvd3>
 
+
+	<div style="height:100px;"></div>
+	<!--<heatmap id="heatmap-1" data="heatmapData" config="heatmapConfig" width="834" height="400" class="ng-isolate-scope"></heatmap>-->
+	<h2>Probability Density</h2>
+	<canvas id="tableHeatmap" width="1250" height="625"></canvas>
+
 	<!--
 	<h2>5 Min Prediction</h2>
 	<nvd3 options='options' data='fiveMinData'></nvd3>
