--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,6 +33,14 @@
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300,200' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Quicksand:400.700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Jura' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Catamaran' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Barlow' rel='stylesheet' type='text/css'>
+
+
+
         <!--FONTS END-->
 
         <!--ANALYTICS-->
@@ -70,6 +78,9 @@
         <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
         <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
         <script src="/bower_components/angular-material/angular-material.js"></script>
+        <script src="/bower_components/heatmap.js/build/heatmap.js"></script>
+        <script src="/bower_components/heatmap.js/plugins/angular-heatmap/angular-heatmap.js"></script>
+        <script src="/bower_components/Chart.HeatMap/dst/Chart.HeatMap.S.js"></script>
         <script src="/src/app/about/index.js"></script>
         <script src="/src/app/account/index.js"></script>
         <script src="/src/app/app.js"></script>
