--- a/assets/src/app/account/index.tpl.html
+++ b/assets/src/app/account/index.tpl.html
@@ -1,7 +1,41 @@
 <div class="container" style="text-align:left">
 	<h1>Account info</h1>
 	<p>edit</p>
+	
+	<form role="form">
+        <div class="form-group">
+            <input class="form-control" name="userName" placeholder="username" title="username" type="text"> 
+            <i class="fa fa-user"></i>
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="firstName" placeholder="first name" title="first name" type="text"> 
+            <i class="fa fa-user"></i>
+        </div>
+        <div class="align-right">
+            <button class="btn btn-default log-btn" type="submit" value="submit">Save</button>
+        </div>
+    </form>
+
+	<h2>settings</h2>
 	<p>notifications</p>
+	<p>email settings</p>
+
 	<h2>api keys</h2>
+
+	<!--poloniex-->
+    <form role="form">
+        <div class="form-group">
+            <input class="form-control" name="apikey" placeholder="api key" title="api key" type="text"> 
+            <i class="fa fa-user"></i>
+        </div>
+        <div class="form-group">
+            <input class="form-control" name="apikey" placeholder="api key" title="api secret" type="text"> 
+            <i class="fa fa-user"></i>
+        </div>
+        <div class="align-right">
+            <button class="btn btn-default log-btn" type="submit" value="submit">Save</button>
+        </div>
+    </form>
+
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
