--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -1,3 +1,10 @@
+<style>
+  .navbar-inverse .navbar-brand:focus{color:#424242}
+  .navbar-inverse .navbar-toggle {border-color: black;}
+  .navbar-inverse .navbar-toggle .icon-bar{background-color:#424242;}
+  .navbar-inverse .navbar-toggle:hover .icon-bar{background-color:#fff;}
+  .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus{background-color:black }
+</style>
 <div ng-controller="NavCtrl" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
