--- a/views/email/marketUpdate.tpl.html
+++ b/views/email/marketUpdate.tpl.html
@@ -68,8 +68,8 @@ background-color: #f6f6f6;
 							<table width="100%" cellpadding="0" cellspacing="0" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 								<tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
 									<td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-                      <p>assetPair: {{order.assetPair}}</p>
-                      <p>price: {{data.price}}</p>
+                      <p>assetPair: {{data.assetPair}}</p>
+                      <p>price: {{data.price}} {{data.asset1}}</p>
                       <p>time delta: {{data.delta}}</p>
                       <p>absoluteChange: {{data.absoluteChange}}</p>
                       <p>percentChange: {{data.percentChange}}</p>
