--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -25,6 +25,7 @@
 	<div style="height:100px;"></div>
 	<p class="btn btn-default" ng-click="solvePortfolio('60000', 100)">Solve</p>
 	<p class="btn btn-default" ng-click="solvePortfolioMulti('60000', 100)">MultiSolve</p>
+	<p class="btn btn-default" ng-click="solvePortfolioPDF('60000', 100)">MultiSolvePDF</p>
 
 </div>
 
